2008-03-12  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (exdent): typo in example.
	Report from Jaakko Hollmen, 11 Mar 2008 19:25:01.

2008-03-12  Sergey Poznyakoff  <gray@gnu.org.ua>

	* info/session.c (_scroll_backward): Avoid wrapping to the end of
	page when a backward scrolling is requested on the top node.
	Patch proposed by Benno Schulenberg.

2008-03-07  Karl Berry  <karl@gnu.org>

	* pretest 4.11.93.

	* info/infodoc.c (info_internal_help_text): reorder, regroup.
	Suggestion from Benno Schulenberg, 06 Mar 2008 11:59:06.

2008-03-07  Joseph Myers  <joseph@codesourcery.com>  (tiny change)

	* doc/texinfo.tex (\includezzz): Use \turnoffactive before
	expanding @value.

2008-03-06  Sergey Poznyakoff  <gray@gnu.org.ua>

	* info/session.c (info_search_internal): Reword wrap-around
	messages.
	* configure.ac (AM_INIT_AUTOMAKE): Finally remove dist-bzip2.

2008-03-05  Sergey Poznyakoff  <gray@gnu.org.ua>

	* util/gendocs.sh: Pass --node-files to texi2html only together
	with the --split option.

	* info/session.c (last_node_p): Remove unused variable.
	(info_search_internal): Print a message if the search wraps over
	the end or beginning of the document.

	* configure.ac (AM_INIT_AUTOMAKE): Move all automake options here.
	Add dist-bzip2 for completeness.
	* Makefile.am (AUTOMAKE_OPTIONS): Remove in favor of
	AM_INIT_AUTOMAKE.
	* AUTHORS: Update the URL of Translation Project.

2008-03-04  Sergey Poznyakoff  <gray@gnu.org.ua>

	* info/session.c (_scroll_backward): Place cursor at the end of
	node if cursor_movement_scrolls_p is on.

	* Makefile.am (AUTOMAKE_OPTIONS): Raise version requirement to
	1.10.1. This is needed for dist-lzma.

	* system.h: Include <ctype.h>
	* info/session.c (scroll_last_node_choices, scroll_last_node): New
	variables.
	(forward_move_node_structure): Special behavior when a scrolling
	command is issued while on the last node.
	* info/session.h (scroll_last_node_choices, scroll_last_node): New
	variables.